v3.0 RC9
 - Addition: [FS#29] Client console commands for all items
 - Bug Fix: [FS#46] Immolate not doing the proper amount of damage
 - Bug Fix: [FS#47] Warden's Hardened skin was not working correctly
 - Bug Fix: [FS#48] Fixed undead's ultimate going off when hexed
 - Bug Fix: [FS#66] Server crash when using wc3_giveitem with item_id over 17
 - Bug Fix: [FS#63] Server crash on given maps b/c of sprite count
 - Bug Fix: [FS#57] cl_minmodels check failure
 - Bug Fix: [FS#70] g_iSpawnReserved index out of bounds
 - Bug Fix: [FS#67] Mole is shown to spectators when mole is in slot2
 - Bug Fix: Respawn failing with AMXX 1.80
 - Bug Fix: Menus not working with AMXX 1.80
 - Bug Fix: [FS#65] Stuck protection triggered after new round started
 - Bug Fix: [FS#55] Command /levitation now available for any race with skill levitation
 - Bug Fix: [FS#54] Sock item always set gravity to 0.5 (wc3_sock value ignored)
 - Bug Fix: [FS#53] Deselected skills are no longer saved to database (will be saved as skill level as 0)
 - Bug Fix: [FS#35] Player couldn't respawn after WC3_Kill (generally after warden ultimate)
 - Bug Fix: [FS#26] If warden is killed last and immunity check should not occur (i.e. killer shouldn't lose a necklace charge)

v3.0 RC8
 - Bug Fix: [FS#25] Warden's Shadow Strike had wrong percentage at level 1
 - Bug Fix: [FS#31] Reset item charges when a player joins the server
 - Bug Fix: [FS#28] rings console command not going through proper checks
 - Bug Fix: [FS#32] Giving XP to terrorists in admin menu would not work
 - Bug Fix: [FS#21] Friendly fire no longer affects charges for helm of excellence
 - Bug Fix: [FS#37] Undead ultimate run time error
 - Bug Fix: [FS#38] Grenade trail created on orc's death when grenade drops
 - Bug Fix: [FS#40] Assist XP awarded twice if a user would respawn

v3.0 RC7
 - Addition: wc3_ignore_bots CVAR which works with wc3_min_players (thanks Krazy)