@@ -1,5 +1,6 @@
 v3.0 RC9
  - Addition: [FS#29] Client console commands for all items
+ - Addition: [FS#59][WEB] Rank based on TOTAL XP - "total" option added to config file
  - Bug Fix: [FS#46] Immolate not doing the proper amount of damage
  - Bug Fix: [FS#47] Warden's Hardened skin was not working correctly
  - Bug Fix: [FS#48] Fixed undead's ultimate going off when hexed
@@ -16,6 +17,7 @@ v3.0 RC9
  - Bug Fix: [FS#53] Deselected skills are no longer saved to database (will be saved as skill level as 0)
  - Bug Fix: [FS#35] Player couldn't respawn after WC3_Kill (generally after warden ultimate)
  - Bug Fix: [FS#26] If warden is killed last and immunity check should not occur (i.e. killer shouldn't lose a necklace charge)
+ - Bug Fix: [WEB] Searching based on steam id or player name wasn't working
 
 v3.0 RC8
  - Bug Fix: [FS#25] Warden's Shadow Strike had wrong percentage at level 1
